# LCD-PiCommander

./: README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
src/lcd_picommander/: __init__.py  hardware.py  main.py  menu.py  system_stats.py
tests/: README.md  __init__.py  conftest.py  test_config_display.py  test_dashboard_config.py  test_system_stats.py  test_wildcard.py
