[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lcd-picommander"
version = "0.1.0"
description = "A configurable LCD Menu tool for Raspberry Pi"
requires-python = ">=3.9"
dependencies = [
    "gpiozero",
    "RPLCD",
    "smbus2",
    "PyYAML",
    "lgpio"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# This allows you to run 'pi-commander' from anywhere after installation
pi-commander = "lcd_picommander.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]